--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: peak-automation-ui
     env: python
     buildCommand: pip install -r requirements.txt && playwright install
-    startCommand: streamlit run ui.py --server.address=0.0.0.0 --server.port=$PORT
+    startCommand: streamlit run streamlit.py --server.address=0.0.0.0 --server.port=$PORT
     autoDeploy: true
