--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,9 @@ services:
   - type: web
     name: peak-automation-ui
     env: python
+    buildCommand: |
+      pip install -r requirements.txt
+      playwright install chromium
+    startCommand: streamlit run ui.py --server.address=0.0.0.0 --server.port=$PORT
     pythonVersion: 3.12
-    buildCommand: cd /opt/render/project/src && pip install -r requirements.txt && playwright install
-    startCommand: streamlit run streamlit.py --server.address=0.0.0.0 --server.port=$PORT
     autoDeploy: true
