adjust render again

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ streamlit==1.51.0
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
 PyYAML==6.0.3
-configparser
+configparser==6.0.1
+
 
 # Safe utilities
 beautifulsoup4==4.14.2
@@ -23,3 +24,4 @@ urllib3==2.5.0
 charset-normalizer==3.4.4
 idna==3.11
 certifi==2025.10.5
+typing-extensions>=4.5.0
