--- a/render.yaml
+++ b/render.yaml
@@ -6,5 +6,5 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       playwright install chromium
-    startCommand: streamlit run ui.py --server.address=0.0.0.0 --server.port=$PORT
+    startCommand: streamlit run streamlit.py --server.address=0.0.0.0 --server.port=$PORT
     autoDeploy: true
